EJBCA 3.4.0
-----------

Important changes:

EJBCA 3.3.1
-----------
This is a minor release with some bugfixes, most notably for Luna HSM.
Read the changelog for details.

This is a plug-in upgrade from 3.3.0. See UPGRADE for the simple instructions.

EJBCA 3.3.0
-----------
This is a major release with new features, improvements and bugfixes.
Read the changelog for details.

This is a plug-in upgrade from 3.2.2. See UPGRADE for the simple instructions.

EJBCA 3.2.2
-----------
This is a minor release with minor improvements and some bugfixes, mostly for MS-SQL.
Read the changelog for details.

This is a plug-in upgrade from 3.2.1. See UPGRADE for the simple instructions.

EJBCA 3.2.1
-----------
This is a minor release with one new features and some bugfixes.
Read the changelog for details.

This is a plug-in upgrade from 3.2.0. See UPGRADE for the simple instructions.

EJBCA 3.2.0
-----------
This is a release with new enterprise features and an internal restucturing of the code base.
Read the changelog for details.

There are database upgrades in this version (from 3.1.x). 
See doc/UPGRADE for instruction how to upgrade your database.
You MUST do that!

Otherwise simply keep/copy ejbca.properties from the earlier installation.
Merge changes from ejbca.properties.sample into your ejbca.properties, 
specially datasource.jndi-name and datasource.jndi-name-prefix if you changed them from the default values.
Copy the directory 'p12' from the earlier installation and 'ant deploy' 
(or deploywithjbossservice) this new one.

Because there are binary files in EJBCA_HOME/lib and many massive changes there is no patch file for upgrading
EJBCA 3.1.3 to 3.2.0. Use the full package from EJBCA 3.2.0 and follow the upgrade instructions.

EJBCA V3.1.4
------------
This is a minor release with some new features and some bugfixes.
Read the changelog for details.

This is a plugin-upgrade from 3.1.3. Except for the following: