@@ -392,16 +392,6 @@ function checkallfields(){
         <% } %>
       </td>
     </tr>
-    <tr id="Row<%=row++%2%>"> 
-      <td width="50%"  align="right"> 
-        <%= ejbcawebbean.getText("USEUTF8SUBJECTDN") %>
-      </td>
-      <td width="50%"> 
-        <input type="checkbox" name="<%=CHECKBOX_USEUTF8SUBJECTDN %>" value="<%=CHECKBOX_VALUE %>" 
-            <% if((editca && x509cainfo.getAlwaysUseUTF8SubjectDN()))
-                 out.write("CHECKED");%>>         
-      </td>
-    </tr>
     <tr  id="Row<%=row++%2%>"> 
       <td width="50%"  align="right"> 
         <%= ejbcawebbean.getText("SIGNEDBY") %>
@@ -526,6 +516,16 @@ function checkallfields(){
          <% } %>   
       </td>
     </tr> 
+    <tr id="Row<%=row++%2%>"> 
+      <td width="50%"  align="right"> 
+        <%= ejbcawebbean.getText("USEUTF8POLICYTEXT") %>
+      </td>
+      <td width="50%"> 
+        <input type="checkbox" name="<%=CHECKBOX_USEUTF8POLICYTEXT %>" value="<%=CHECKBOX_VALUE %>" 
+            <% if((editca && x509cainfo.getUseUTF8PolicyText()))
+                 out.write("CHECKED");%>>         
+      </td>
+    </tr>
    <% if(!processrequest && !isexternal){ %>
     <tr  id="Row<%=row++%2%>"> 
       <td width="50%"  align="right"> 
