@@ -2021,6 +2021,6 @@ COUNTRYOFCITIZENSHIP      = Country of citizenship (ISO3166)
 
 COUNTRYOFRESIDENCE        = Country of residence (ISO3166)
 
-USEUTF8SUBJECTDN          = Always use UTF8 strings in subject DN
+USEUTF8POLICYTEXT         = Use UTF8 in policy text
 
 VERIFY                    = Verify
