@@ -2228,6 +2228,6 @@ COUNTRYOFRESIDENCE        = Country of residence (ISO3166)
 
 UPLOADUSERDATATEMP        = Upload User Data Template
 
-USEUTF8SUBJECTDN          = Always use UTF8 strings in subject DN
+USEUTF8POLICYTEXT         = Use UTF8 in policy text
 
 VERIFY                    = Verify
