@@ -2090,6 +2090,6 @@ COUNTRYOFCITIZENSHIP      = Pays de citoyennet&eacute; (ISO3166)
 
 COUNTRYOFRESIDENCE        = Pays de r&eacute;sidence (ISO3166)
 
-USEUTF8SUBJECTDN          = toujours utiliser les chaines UTF8 dans le sujet du DN 
+USEUTF8POLICYTEXT         = utiliser UTF8 dans le text du policy
 
 VERIFY                    = V&eacute;rifer
