@@ -2126,6 +2126,6 @@ COUNTRYOFRESIDENCE        = Bos&auml;ttningsland (ISO3166)
 
 UPLOADUSERDATATEMP        = Ladda upp mall f&ouml;r utskrift av anv&auml;ndardata
 
-USEUTF8SUBJECTDN          = Anv&auml;nd alltid UTF8 str&auml;ng i subject DN
+USEUTF8POLICYTEXT         = Anv&auml;nd UTF8 i policy text
 
 VERIFY                    = Verifiera
