@@ -1,7 +1,17 @@
 EJBCA 3.4.0
 -----------
+This is a release with many new interesting features and framework improvements.
+Read the changelog for details.
+
+For upgrade instructions, please se UPGRADE.
+
+Because there are binary files in EJBCA_HOME/lib and many massive changes there is no patch file for upgrading
+EJBCA 3.3.x to 3.4.0. Use the full package from EJBCA 3.4.0 and follow the upgrade instructions.
 
 Important changes:
+In EJBCA 3.4.0 the ASN.1 string encoding for DNs are now UTF8. In EJBCA 3.3.x and earlier, the default encoding was
+PrintableString, unless the character set forced the usage of UTF8 (international characters). 
+Now DN components are always encoded as UTF8 (except for components that does not allow UTF8 such as C and SerialNumber).
 
 EJBCA 3.3.1
 -----------
